<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LinkGame</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="score">分数：</string>
    <string name="touch_start">点击开始游戏！</string>
    <string name="resume">继续游戏</string>
    <string name="pause">暂停</string>
    <string name="exit_game">退出游戏</string>
    <string name="new_game">新游戏</string>
    <string name="play_again">再来一局</string>
    <string name="time_up">时间到！</string>
    <string name="time">时间：</string>
    <string name="game_over">游戏结束！</string>
    <string name="victory">Victory！</string>
    <string name="title_activity_pause_dialog">暂停</string>

</resources>
